# Sigma_Touch

./: .gitmodules  CLAUDE.md
SigmaTouch/: .gitignore  build.gradle  gradle.properties  settings.gradle
SigmaTouch/gradle/: libs.versions.toml
SigmaTouch/gradle/wrapper/: gradle-wrapper.properties
SigmaTouch/sigmatouch/: .gitignore  build.gradle
SigmaTouch/sigmatouch/src/main/: AndroidManifest.xml
SigmaTouch/sigmatouch/src/main/assets/: Unreal.ini  UnrealTournament.ini  User.ini
SigmaTouch/sigmatouch/src/main/java/com/opentouchgaming/sigmatouch/: EntryActivity.java  SigmaFragment.java  TGAReader.java  UE1Launcher.kt  UT99Launcher.kt
SigmaTouch/sigmatouch/src/main/java/com/opentouchgaming/sigmatouch/engineoptions/: EngineOptionsUT99.kt  EngineOptionsUnreal.kt
SigmaTouch/sigmatouch/src/main/jni/: Android.mk  Application.mk  INFO.txt
SigmaTouch/sigmatouch/src/main/jni/Games/UT99/: CMakeLists.txt  build.gradle
SigmaTouch/sigmatouch/src/main/jni/Games/Unreal/: CMakeLists.txt  build.gradle
SigmaTouch/sigmatouch/src/main/res/layout/: activity_entry.xml  dialog_options_openjk.xml  dialog_options_tfe.xml  dialog_options_unreal.xml  dialog_options_ut99.xml
SigmaTouch/sigmatouch/src/main/res/raw/: about.txt  changelog.xml  changes.txt
SigmaTouch/sigmatouch/src/main/res/values/: strings.xml
